--- a/CommonLibProject/CommonUtils/src/main/res/layout/view_logcat.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/view_logcat.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/log_view"
-    android:layout_width="150dp"
-    android:layout_height="200dp"
+    android:layout_width="180dp"
+    android:layout_height="220dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -25,6 +25,17 @@
             android:text="@string/logcat"
             android:textColor="@color/text_color_black"
             android:textSize="14sp" />
+
+        <CheckBox
+            android:id="@+id/toggle_auto_scroll_to_bottom_logcat_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:button="@drawable/toggle_auto_scroll_to_bottom_white"
+            android:checked="true"
+            android:padding="5dp"
+            android:src="@drawable/selector_pause_white" />
 
         <ImageButton
             android:id="@+id/btn_close_logcat_view"
