--- a/CommonLibProject/CommonUtils/src/main/res/layout/view_logcat.xml
+++ b/CommonLibProject/CommonUtils/src/main/res/layout/view_logcat.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/log_view"
-    android:layout_width="180dp"
-    android:layout_height="220dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:minHeight="220dp"
+    android:minWidth="180dp"
     android:orientation="vertical">
 
     <LinearLayout
